--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
-/*////////////// Fonts //////////////*/
+.wrapper {
+	width: 960px;
+	margin: 0 auto;
+	background: #fff;
+	padding: 45px 20px;
+}
 
-/* link the web font used for the level 1 heading here */
-
-/*////////// Global Styles //////////*/
+div{ display:block;}
 
 body {
 	background: #F3EBE9;
@@ -10,11 +13,26 @@ body {
 	font-family: 'Times New Roman', serif; 
 }
 
-.wrapper {
-	width: 960px;
-	margin: 0 auto;
-	background: #fff;
-	padding: 0 45px 20px;
+head {
+    display: none;
 }
+
+header a {
+    color: rgb(152,173,166);
+    text-decoration: none;}
+
+h1 { padding-bottom: 10px;
+    margin: 0 0 5px;
+    font-size: 5em;
+    font-weight: normal;
+    font-family: 'Baskerville', serif;
+    border-bottom: 1px solid #ccc;}
+
+/* link the web font used for the level 1 heading here */
+
+/*////////// Global Styles //////////*/
+
+
+
 
 /* Write all remaining styles here */
