--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 /*////////////// Fonts //////////////*/
 
-/* link the web font used for the level 1 heading here */
+@font-face {
+  font-family: 'Baskerville';
+  src: url(../fonts/Baskerville.ttc)
+}/* link the web font used for the level 1 heading here */
 
 /*////////// Global Styles //////////*/
 
@@ -16,5 +19,10 @@ body {
 	background: #fff;
 	padding: 0 45px 20px;
 }
+
+h1 {
+  font-family: "Baskerville";
+  
+
 
 /* Write all remaining styles here */
